--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@
 
 # If you are building a simple GitHub user page (username.github.io) then use these settings:
 url: "http://ninjacn.com"
+domain: "ninjacn.com"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -23,7 +24,7 @@ description:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+avatar: "/static/img/avatar-icon.png"
 
 # List of links in the navigation bar
 navbar-links:
