--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ avatar: "/static/img/avatar-icon.png"
 
 # List of links in the navigation bar
 navbar-links:
-  Home: "/"
+  Home: ""
   Opendeploy: "https://opendeploy.readthedocs.io/"
   About Me: "aboutme"
   
